# cmake-symbol-interposition-example

./: .travis.yml  CMakeLists.txt  build.sh  main.cpp  shared1.cpp  shared2.cpp  static.cpp  static.h
cmake/Modules/: localization.cmake
